add padding to md

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 
                     <div class="text-center" style="background:white">
                         <!--<iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/shop.xml?account=410012513146482&amp;quickpay=shop&amp;payment-type-choice=on&amp;mobile-payment-type-choice=on&amp;writer=buyer&amp;targets-hint=SDLash3D+Team+Donation&amp;default-sum=200&amp;button-text=03&amp;successURL=http%3A%2F%2Fsdlash3d.github.io%2Fthank-you.html" width="450" height="211"></iframe>-->
-			<zero-md src="https://raw.githubusercontent.com/FWGS/xash3d-fwgs/master/Documentation/donate.md"></zero-md>
+			<zero-md style="padding:50px;" src="https://raw.githubusercontent.com/FWGS/xash3d-fwgs/master/Documentation/donate.md"></zero-md>
                     </div>
                 </div>
 
